Fixes to WebRTC app

--- a/sip-servlets-examples/websocket-b2bua/src/main/sipapp/index.html
+++ b/sip-servlets-examples/websocket-b2bua/src/main/sipapp/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE html>
-<!--
-* Copyright (C) 2012 Doubango Telecom <http://www.doubango.org>
-* License: GPLv3
-* This file is part of Open Source sipML5 solution <http://www.sipml5.org>
--->
 <html lang="en">
   <head>
-	<a href="jain-sip/MobicentsWebClient.jsp">JSIP Sample</a>
+	<a href="MobicentsWebRTCPhone/MobicentsWebRTCPhoneView.html">Mobicents WebRTC Phone</a>
 
   </body>
 </html>
