--- a/sip-servlets-examples/websocket-b2bua/src/main/sipapp/MobicentsWebRTCPhone/MobicentsWebRTCPhoneView.html
+++ b/sip-servlets-examples/websocket-b2bua/src/main/sipapp/MobicentsWebRTCPhone/MobicentsWebRTCPhoneView.html
@@ -149,7 +149,7 @@
                 }
             }
 
-            function playRemoteAudio(remoteMediaStream) 
+            /*function playRemoteAudio(remoteMediaStream) 
             {
                 if(typeof navigator.webkitGetUserMedia != 'undefined')
                 {     
@@ -173,7 +173,7 @@
                 {
                     document.getElementById("remoteAudio").mozSrcObject=undefined;
                 }
-            }
+            }*/
 
             /*function playLocalVideo(localMediaStream) 
             {
