--- a/sip-servlets-examples/websocket-b2bua/src/main/sipapp/index.html
+++ b/sip-servlets-examples/websocket-b2bua/src/main/sipapp/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
+<meta http-equiv="refresh" content="0; URL=Room/index.html">
 <html lang="en">
   <head>
-	<a href="MobicentsWebRTCPhone/MobicentsWebRTCPhoneView.html">Mobicents WebRTC Phone</a>
-
+	<a href="Room/index.html">Room App</a>
   </body>
 </html>
